--- a/src/views/house/details.hbs
+++ b/src/views/house/details.hbs
@@ -14,30 +14,33 @@
             Description:
             {{house.description}}
           </p>
-
-          <!-- if there are already tenants of the housing, separate their names with a comma and a space ", "  -->
-          <p>People rented this housing: Alex Petkov, Ivan Dobrev</p>
-
-          <!-- If not display: -->
-          <p>People rented this housing: There are no tenants yet.</p>
+          {{#if house.tenants}}
+            <!-- if there are already tenants of the housing, separate their names with a comma and a space ", "  -->
+            <p>People rented this housing: {{house.tenants}}</p>
+          {{else}}
+            <!-- If not display: -->
+            <p>People rented this housing: There are no tenants yet.</p>
+          {{/if}}
         </div>
       </div>
-
       <!-- if there is no registered user, do not display buttons-->
-
       {{#if user}}
-
         <div class="product-btn">
           <!-- Only for registered user and creator of the housing offer-->
-          <a href="#" class="edit">Edit</a>
-          <a href="#" class="remove">Delete</a>
-
-          <!-- logged in user with available pieces-->
-          <a href="#" class="rentHome">Rent a home, available 2 housing</a>
-          <p class="alRentHome">You have already rent this home</p>
-
-          <!-- logged in user with no available pieces-->
-          <p class="no-housing">No Housing Available!</p>
+          {{#if isOwner}}
+            <a href="/house/edit/{{house._id}}" class="edit">Edit</a>
+            <a href="/house/delete{{house._id}}" class="remove">Delete</a>
+          {{else if isTenant}}
+            <p class="alRentHome">You have already rent this home</p>
+          {{else if available}}
+            <a href="/house/rent{{house._id}}" class="rentHome">Rent a home, available
+              {{available}}
+              housing</a>
+            <!-- logged in user with available pieces-->
+          {{else}}
+            <!-- logged in user with no available pieces-->
+            <p class="no-housing">No Housing Available!</p>
+          {{/if}}
         </div>
 
       {{/if}}
